# phenoXddLib

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ADR.md  AGENTS.md  ARCHIVED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  FUNDING.yml  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  cliff.toml  clippy.toml  deny.toml  gitleaks.toml  nextest.toml
.agileplus/specs/001-xdd-lib-core/: SPEC.md  meta.json  tasks.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: benchmark.yml  cargo-deny.yml  ci.yml  quality-gate.yml  release.yml  security.yml  trufflehog.yml
adr/: ADR-001-architecture.md
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts  site-meta.mjs
docs/fa/: index.md
docs/fa-Latn/: index.md
docs/guide/: index.md
docs/journeys/: index.md  quick-start.md
docs/reference/: contract-testing.md  index.md  mutation-testing.md  property-testing.md  specdd.md
docs/reference/architecture/: index.md
docs/stories/: hello-world.md  index.md
docs/tests/: playwright.config.ts
docs/tests/component/: build-output.test.mjs
docs/tests/e2e/: docsite.spec.ts
docs/tests/helpers/: site-meta.mjs
docs/traceability/: index.md
docs/zh-CN/: index.md
docs/zh-TW/: index.md
kitty-specs/phenotype-xdd-lib-docs-site-completion/: spec.md
src/: lib.rs
src/contract/: mod.rs
src/domain/: mod.rs
src/mutation/: mod.rs
src/property/: mod.rs  strategies.rs
src/spec/: mod.rs
tests/: contract_tests.rs  mutation_tests.rs  property_tests.rs
(+1 files in other folders)
