[package]
name = "phenotype-xdd-lib"
version = "0.1.0"
edition = "2021"
description = "Cross-cutting xDD utilities: property testing, contract verification, mutation coverage"
license = "MIT"
repository = "https://github.com/KooshaPari/phenotype-xdd-lib"
keywords = ["xdd", "property-testing", "contract-testing", "mutation-testing"]
categories = ["development-tools", "testing"]

[workspace]

[dependencies]
# Property-based testing
proptest = "1.4"
quickcheck = "1.0"

# Contract testing
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# Error handling
thiserror = "2"
anyhow = "1.0"

[dev-dependencies]
# Testing
proptest = "1.4"
quickcheck = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }

[lib]
name = "phenotype_xdd_lib"
path = "src/lib.rs"

[[test]]
name = "property_tests"
path = "tests/property_tests.rs"

[[test]]
name = "contract_tests"
path = "tests/contract_tests.rs"

[[test]]
name = "mutation_tests"
path = "tests/mutation_tests.rs"
